[gd_scene load_steps=7 format=2]

[ext_resource path="res://Spritesheets/DialogBox/dialog_box.png" type="Texture" id=1]
[ext_resource path="res://Fonts/font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/DialogBox.gd" type="Script" id=3]
[ext_resource path="res://SoundEffects/talk.wav" type="AudioStream" id=4]
[ext_resource path="res://Spritesheets/DialogBox/dialog_next.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 7
font_data = ExtResource( 2 )

[node name="DialogBox" type="CanvasLayer"]
pause_mode = 2
offset = Vector2( 70, 160 )
scale = Vector2( 4, 3 )
transform = Transform2D( 4, 0, 0, 3, 70, 160 )
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 0.427451, 0.431373, 0.752941, 1 )
margin_left = 0.140045
margin_top = 0.285023
margin_right = 128.14
margin_bottom = 64.285
texture = ExtResource( 1 )
expand = true

[node name="Text" type="Label" parent="."]
margin_left = 10.14
margin_top = 10.285
margin_right = 118.14
margin_bottom = 54.285
custom_fonts/font = SubResource( 1 )
text = "Hello World"
autowrap = true
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="TextureRect" parent="."]
margin_left = 118.14
margin_top = 51.5911
margin_right = 125.14
margin_bottom = 58.5911
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
bus = "SoundEffects"

[node name="Tween" type="Tween" parent="."]

[node name="NextTween" type="Tween" parent="."]
repeat = true
playback/repeat = true
[connection signal="tween_completed" from="Tween" to="." method="_line_over"]
[connection signal="tween_step" from="Tween" to="." method="_play_sound"]
